2005-09-02  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm:
	New discovery parameter: define-tokensets

2005-08-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (discover):
	Replaced $Torrus::DevDiscover::listAdminDownInterfaces
	with parameter RFC2863_IF_MIB::list-admindown-interfaces
	and $Torrus::DevDiscover::listNotPresentInterfaces
	with RFC2863_IF_MIB::list-notpresent-interfaces

2005-08-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* doc/extstorage.pod.in: Started documenting the External storage

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm:
	New discovery parameter: RFC2863_IF_MIB::external-serviceid

	* xmlconfig/generic/rfc2863.if-mib.xml: Byte counters adapted for
	External storage

	* perllib/Torrus/Collector.pm: Multiple storage types per token

	* perllib/Torrus/ConfigTree/Validator.pm (validateInstanceParams):
	Enabled validation of list values

	* perllib/Torrus/Collector/ExtDBI.pm: Pluggable backend module for
	External storage

	* perllib/Torrus/Collector/ExternalStorage.pm:
	New collector storage type

2005-08-02  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Release 1.0.3

2005-07-29  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* configure.ac: Patch Level 1: PERLINC configuration variable

2005-07-27  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Release 1.0.2

2005-07-22  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm (applySelectors):
	Selectors format slightly changed: the type is passed into the methods

2005-07-15  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm (buildConfig):
	New discovery parameter: disable-snmpcollector	

	* bin/devdiscover.in: Preventing the bundle file update when
	--limit is specified.

	* perllib/Torrus/Collector/SNMP.pm (callback): mapping reset after
	host unreachable
