@@ -1,3 +1,8 @@
+2005-09-28  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/AlliedTelesyn_PBC18.pm:
+	new discovery module
+
 2005-09-02  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/DevDiscover.pm:
